--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,6 @@ jobs:
         run: npm install -g @railway/cli
 
       - name: Deploy
-        run: railway up --service bill-to-friends dist
+        run: railway up --service bill-to-friends ./dist
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
